--- a/templates/base.html
+++ b/templates/base.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage</title>
+    <title>Document</title>
 </head>
 <body>
-    <h3><u>Welcome to the app!</u></h3>
-    <a href="playlist"><button>Get my playlist</button></a>
+    <h1>Playlist generator</h1>
+    {% block content %}
+    {% endblock %}
 </body>
 </html>
