created spotify handler wrapper class for the spotipy Spotify class and moved auth handling to the home page with auto redirects to the home page if not logged in

--- a/playlist_maker/home/templates/home.html
+++ b/playlist_maker/home/templates/home.html
@@ -6,7 +6,7 @@
         <p> Discover new music by creating a custom Spotify playlist based on your favourite tracks</p>
 
 
-        <a href="{{ url_for('auth_bp.login') }}">
+        <a href="{{ auth_url }}">
             <button type="button">
                 Log in with Spotify
             </button>
