--- a/playlist_maker/maps/templates/mapping.html
+++ b/playlist_maker/maps/templates/mapping.html
@@ -22,7 +22,7 @@
 
     <h2>Welcome {{ name }}!</h2>
     <h3>Input the following info</h3>
-    <form action="/request" method="POST">
+    <form action="" method="POST">
         Destination: <input type="text" name="destination">
         Current location: <input type="text" name="origin">
         Mode: <input type="text" name="mode">
