--- a/playlist_maker/mot/templates/mot.html
+++ b/playlist_maker/mot/templates/mot.html
@@ -2,9 +2,9 @@
 {% block content %}
     {% include "user_info.html" %}
     <form action="" method="POST">
-        Current location: <input type="text" name="origin" value="{{ origin }}">
-        Destination: <input type="text" name="destination" value="{{ destination }}">
-        <button type="submit">Submit</button>
+        <input type="submit" name="walking" value="Walking">
+        <input type="submit" name="driving" value="Driving">
+        <input type="submit" name="biking" value="Biking">
     </form>
     <!-- <div id="locationField">
         <input id="autocomplete" name="location" placeholder="Enter your address" onFocus="geolocate()" type="text"></input>
