--- a/playlist_maker/maps/templates/mapping.html
+++ b/playlist_maker/maps/templates/mapping.html
@@ -2,8 +2,8 @@
 {% block content %}
     {% include "user_info.html" %}
     <form action="" method="POST">
-        Current location: <input type="text" name="origin" value="{{ origin }}">
-        Destination: <input type="text" name="destination" value="{{ destination }}">
+        Current location: <input type="text" name="origin" value="{{ user_choices.get('origin', '') }}">
+        Destination: <input type="text" name="destination" value="{{ user_choices.get('destination', '') }}">
         <button type="submit">Submit</button>
     </form>
     <!-- <div id="locationField">
