--- a/playlist_maker/templates/base.html
+++ b/playlist_maker/templates/base.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Playlist Generator</title>
 </head>
 <body>
-    <h1>Playlist generator</h1>
+    <h1>Playlist Generator</h1>
     {% block content %}
     {% endblock %}
 </body>
