removing podcast option

--- a/backend/playlist_maker/playlist/templates/playlist.html
+++ b/backend/playlist_maker/playlist/templates/playlist.html
@@ -16,7 +16,6 @@
     {% endif %}
     {% if user_choices %}-----{% endif %}
     <form action="" method="POST">
-        <input type="submit" name="music" value="Music">
-        <input type="submit" name="podcast" value="Podcast">
+        <input type="submit" name="see_playlist" value="See my playlist">
     </form>
 {% endblock %}
