--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+*{
+  margin: 0;
+  padding: 10;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
