fixed display_name localStorage example

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,19 +1,30 @@
+@import url(https://fonts.googleapis.com/css?family=Krona+One);
+@import url(https://fonts.googleapis.com/css?family=Poppins);
+@import url(https://fonts.googleapis.com/icon?family=Material+Icons);
+
+* {
+  font-family:'Poppins';
+}
+
 .app{
-  background: lightblue;
+  background: rgb(68, 125, 82);
 }
 
 body {
-  font-family: Calibri, Helvetica, sans-serif;
-  background-color: #778aab;
+  font-family: 'Poppins';
+  background-color: whitesmoke;
+  text-align: center;
 }
   
 .container {
   padding: 50px;
-  background-color: #eeddcc;
+  background-color: rgb(220, 234, 231);
+  border-radius: 10px;
+  box-shadow: black;
 }
 
 div {
-  padding: 10px 0;
+  padding: 10px;
   padding-right: 10px;
   padding-left: 10px;
 }
@@ -28,35 +39,86 @@ input[type=text] {
 }
   
 input[type=text]:focus {
-  background-color: #B0B8B4FF;
+  background-color: white;
   outline: none;
+  border: 2px #F2D1EF;
+  font-family: 'Poppins';
 }
   
 hr {
-  border: 1px solid #778aab;
+  border: 2px dotted #2F5451;
   /* #f1f1f1;   */
   margin-bottom: 25px;
 }
 
-.button {
+h1 {
+  font-family: 'Krona One';
+  font-size: 45px;
+}
+
+h2 {
+  font-family: 'Krona One';
+  font-size: 30px;
+  color: #2F5451;
+}
+
+p,
+label {
+  font-size: 20px;
+  font: 'Poppins-Regular';
+  color: #2F5451;
+}
+
+.button,
+.buttonforms,
+.buttonstartover,
+.buttonback {
   display: inline-block;
   padding: 0.35em 1.2em;
-  border:0.1em solid #FFFFFF;
   margin:0 0.3em 0.3em 0;
-  border-radius:12px;
+  border-radius: 2px;
   box-sizing: border-box;
   text-decoration:none;
-  font-family:'Roboto',sans-serif;
-  font-weight:300;
-  color:#FFFFFF;
+  font-family:'Poppins';
+  font-size: 16px;
+  color: black;
   text-align:center;
   transition: all 0.2s;
-  background-color: #778aab;
+  border: 20px rgb(93, 116, 102);
+  background-color: white;
+  height: 50px;
+  width: 200px;
+  cursor: pointer;
 } 
 
 .button:hover {
   color:#000000;
-  background-color:#FFFFFF;
+  background-color: #96CC95;
+}
+
+.buttonforms:hover{
+  color:#000000;
+  background-color: #1DB954;
+}
+
+.buttonstartover:hover,
+.buttonback:hover {
+  color:#000000;
+  background-color: #F2D1EF;
+}
+
+.material-icons {
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 36px;
+  display: inline-block;
+  line-height: 1;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
 }
 
 @media all and (max-width:30em){
